--- a/PopcornApp/app/src/main/res/layout/activity_login.xml
+++ b/PopcornApp/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="50dp"
-    tools:context=".MainActivity">
+    tools:context=".Login">
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:paddingBottom="30dp"
-            android:text="Welcome to the Cub Scout App"
+            android:text="Welcome to the Popcorn Selling App"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="@color/TextColor" />
 
