--- a/PopcornApp/app/src/main/res/layout/den_sales_page.xml
+++ b/PopcornApp/app/src/main/res/layout/den_sales_page.xml
@@ -134,7 +134,7 @@
                 android:cropToPadding="false"
                 android:onClick="BuffChedDesc"
                 android:scaleType="fitCenter"
-                android:src="@drawable/buffalochedcheese" />
+                android:src="@drawable/military" />
 
             <Space
                 android:layout_width="0dp"
@@ -189,7 +189,7 @@
                 android:layout_weight=".15"
                 android:onClick="CarmCornDesc"
                 android:scaleType="fitCenter"
-                android:src="@drawable/caramelcorn" />
+                android:src="@drawable/military" />
 
             <Space
                 android:layout_width="0dp"
@@ -336,7 +336,7 @@
                 android:cropToPadding="false"
                 android:onClick="CheeseLoveDesc"
                 android:scaleType="fitCenter"
-                android:src="@drawable/cheeselovers" />
+                android:src="@drawable/military" />
 
             <Space
                 android:layout_width="0dp"
@@ -391,7 +391,7 @@
                 android:layout_weight=".15"
                 android:onClick="WhitePretzelDesc"
                 android:scaleType="fitCenter"
-                android:src="@drawable/whitechocpretzel" />
+                android:src="@drawable/military" />
 
             <Space
                 android:layout_width="0dp"
